metrics/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ocs-metrics-exporter
    app.kubernetes.io/name: ocs-metrics-exporter
    app.kubernetes.io/version: 0.0.1
  name: ocs-metrics-exporter
  namespace: openshift-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ocs-metrics-exporter
      app.kubernetes.io/name: ocs-metrics-exporter
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
      labels:
        app.kubernetes.io/component: ocs-metrics-exporter
        app.kubernetes.io/name: ocs-metrics-exporter
        app.kubernetes.io/version: 0.0.1
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - resources:
          requests:
            cpu: 50m
            memory: 50Mi
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 15
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
          initialDelaySeconds: 15
        image: quay.io/ocs-dev/ocs-operator
        name: ocs-metrics-exporter
        ports:
          - name: https-main
            containerPort: 8443
            protocol: TCP
          - name: https-self
            containerPort: 9443
            protocol: TCP
        command:
        - /usr/local/bin/metrics-exporter
        args:
          - '--namespaces'
          - openshift-storage
          - '--port'
          - "8443"
          - '--exporter-port'
          - "9443"
          - '--secure-serving=true'
          - '--tls-cert-file=/etc/tls/private/tls.crt'
          - '--tls-key-file=/etc/tls/private/tls.key'
        securityContext:
          capabilities:
            drop:
              - ALL
          runAsUser: 65532
          runAsGroup: 65532
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: ceph-config
          mountPath: /etc/ceph
          readOnly: true
        - name: ocs-metrics-exporter-tls
          mountPath: /etc/tls/private
          readOnly: true
      serviceAccountName: ocs-metrics-exporter
      volumes:
      - name: ceph-config
        configMap:
          name: ocs-metrics-exporter-ceph-conf
      - name: ocs-metrics-exporter-tls
        secret:
          secretName: ocs-metrics-exporter-tls
