metrics/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocs-metrics-exporter
  namespace: openshift-storage
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ocs-metrics-exporter-tls
  labels:
    app.kubernetes.io/component: ocs-metrics-exporter
    app.kubernetes.io/name: ocs-metrics-exporter
spec:
  type: ClusterIP
  ports:
  - name: https-main
    port: 8443
    targetPort: https-main
  - name: https-self
    port: 9443
    targetPort: https-self
  selector:
    app.kubernetes.io/component: ocs-metrics-exporter
    app.kubernetes.io/name: ocs-metrics-exporter
